exports[`Component: Card should allow skipping title 1`] = `
<div
  className="ui container css-j7k7y6">
  Content
</div>
`;

exports[`Component: Card should render with title and children 1`] = `
<div
  className="ui container css-j7k7y6">
  <h1
    className="ui header css-y2vsc">
    Title
  </h1>
  Content
</div>
`;
